refactor: replace deprecated URL(String) constructor